[gd_scene load_steps=11 format=3 uid="uid://crgtlupevunrp"]

[ext_resource type="PackedScene" uid="uid://djecfjb5wt7sf" path="res://bird.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://bsbhatwog5g24" path="res://game.gd" id="1_feb5d"]
[ext_resource type="Texture2D" uid="uid://dsu71xfcp7x34" path="res://files/city_background_night.png" id="2_e2o6t"]
[ext_resource type="Script" uid="uid://bo2ympl4xpqc" path="res://bird.gd" id="3_fc0e3"]
[ext_resource type="AudioStream" uid="uid://jyvmexsqplvp" path="res://sound/effects/264828__cmdrobot__text-message-or-videogame-jump.ogg" id="4_ryrav"]
[ext_resource type="Script" uid="uid://faegiu07d07f" path="res://start_screen.gd" id="5_7jktm"]
[ext_resource type="AudioStream" uid="uid://civv40ino0n7h" path="res://sound/effects/584336__ro1qa__game-over-sound-i-think.wav" id="5_eow3j"]
[ext_resource type="Script" uid="uid://b4bwnwkt5xh0t" path="res://credits.gd" id="8_j5wjh"]

[sub_resource type="LabelSettings" id="LabelSettings_fc0e3"]
font_size = 10
font_color = Color(0.7176471, 0.6784314, 0.48235294, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(12, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_feb5d")

[node name="player" parent="." instance=ExtResource("1_80nbo")]
unique_name_in_owner = true
visible = false
collision_mask = 3
platform_floor_layers = 0
script = ExtResource("3_fc0e3")

[node name="JumpSound" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("4_ryrav")
volume_db = -0.085
max_polyphony = 3

[node name="GameOverSound" type="AudioStreamPlayer" parent="player"]
stream = ExtResource("5_eow3j")
volume_db = -1.347

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(148, 0)
zoom = Vector2(3, 3)

[node name="Score" type="Label" parent="Camera2D"]
unique_name_in_owner = true
visible = false
z_index = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 93.0
offset_right = 20.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Score: 0"
label_settings = SubResource("LabelSettings_fc0e3")
horizontal_alignment = 2

[node name="Parallax2D" type="Parallax2D" parent="."]
unique_name_in_owner = true
process_mode = 3
z_index = -6
scale = Vector2(0.22, 0.22)
repeat_size = Vector2(8192, 0)
autoscroll = Vector2(-50, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture = ExtResource("2_e2o6t")

[node name="PipeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="StartScreen" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("5_7jktm")

[node name="ColorRect" type="ColorRect" parent="StartScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21176471, 0.21176471, 0.21176471, 0.6039216)

[node name="Label" type="Label" parent="StartScreen"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 128.0
offset_right = 155.5
offset_bottom = 212.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.71956784, 0.6790915, 0.48426127, 1)
theme_override_font_sizes/font_size = 61
text = "Bird Game"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = 157.0
offset_right = 109.5
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7176471, 0.6784314, 0.48235294, 1)
text = "Press space or click to play..."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = 298.0
offset_right = 109.5
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7176471, 0.6784314, 0.48235294, 1)
theme_override_font_sizes/font_size = 12
text = "Press c to open credits."
horizontal_alignment = 1
vertical_alignment = 2

[node name="Credits" type="RichTextLabel" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.0
offset_top = -113.0
offset_right = 414.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.7176471, 0.6784314, 0.48235294, 1)
theme_override_font_sizes/normal_font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_j5wjh")

[node name="Label4" type="Label" parent="StartScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7176471, 0.6784314, 0.48235294, 1)
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopAndBottom" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopAndBottom"]
position = Vector2(0, -124)
shape = SubResource("RectangleShape2D_7jktm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TopAndBottom"]
position = Vector2(0, 124)
shape = SubResource("RectangleShape2D_7jktm")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
volume_db = -5.4

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
